--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -33,5 +33,6 @@ sample_directory = /usr/share/doc/postfix-2.6.6/samples
 readme_directory = /usr/share/doc/postfix-2.6.6/README_FILES
 unknown_local_recipient_reject_code = 550
 
-virtual_alias_maps = hash:/etc/postfix/virtual regex:/etc/postfix/virtual_regex
-smtpd_recipient_restrictions = check_recipient_access hash:/etc/postfix/recipient_access, reject_unauth_destination
+<% if @options %><% options.each do |value| %>
+<%= value %>
+<% end %><% end %>
