--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -6,7 +6,7 @@ mynetworks = 127.0.0.0/8
 mydestination = $myhostname, localhost.$mydomain, localhost
 smtpd_banner = $myhostname ESMTP $mail_name
 
-relayhost = <%= relayhost %>
+relayhost = <%= @relayhost %>
 
 inet_interfaces = localhost
 inet_protocols = all
@@ -33,6 +33,6 @@ sample_directory = /usr/share/doc/postfix-2.6.6/samples
 readme_directory = /usr/share/doc/postfix-2.6.6/README_FILES
 unknown_local_recipient_reject_code = 550
 
-<% if @options %><% options.each do |value| %>
+<% if @options %><% @options.each do |value| %>
 <%= value %>
 <% end %><% end %>
