--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -1,7 +1,7 @@
 myhostname = <%= @hostname %>
 mydomain = $myhostname
 myorigin = $mydomain
-mynetworks = 127.0.0.0/8
+mynetworks = 127.0.0.0/8 [::1]/128 [fe80::]/10
 
 mydestination = $myhostname, localhost.$mydomain, localhost
 smtpd_banner = $myhostname ESMTP $mail_name
